<resources>
    <!-- These strings are used for various button labels and app name. -->
    <string name="app_name">project_two</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="btn_decimal">.</string>
    <string name="btn_addition">+</string>
    <string name="btn_division">/</string>
    <string name="btn_equal">=</string>
    <string name="btn_multi">*</string>
    <string name="btn_perc">%</string>
    <string name="btn_plusminus">+/-</string>
    <string name="btn_subtr">-</string>
</resources>
